--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Hero Section -->
         <section id="home" class="hero">
             <div class="hero-container">
-                <h1 class="hero-title">Hi, I'm 23IT140 Shubham Zala</span></h1>
+                <h1 class="hero-title">Hi, I'm Shubham Zala</span></h1>
                 <p class="hero-subtitle">Full Stack Developer & UI/UX Designer</p>
                 <p class="hero-description">
                     I create beautiful, functional, and user-centered digital experiences.
@@ -163,7 +163,7 @@
                         <div class="contact-details">
                             <div class="contact-item">
                                 <i class="fas fa-envelope"></i>
-                                <span>23it140@charusat.edu.in</span>
+                                <span>basicportfolio@gmail.com</span>
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-phone"></i>
@@ -171,7 +171,7 @@
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Anad , IN</span>
+                                <span>Anad - Gujrat, IN</span>
                             </div>
                         </div>
                         <div class="social-links">
@@ -199,10 +199,11 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 John Doe. All rights reserved.</p>
+            <p>&copy; 2025 Shubham Zala. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
